--- a/main.html
+++ b/main.html
@@ -1,16 +1,156 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>AccioJob Blog</title>
+    <!-- Tailwind CSS CDN -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        /* Custom styles for the Inter font and general body */
+        body {
+            font-family: "Inter", sans-serif;
+            background-color: #f0f4f8; /* Light gray background */
+            color: #334155; /* Dark slate gray text */
+        }
+        .container {
+            max-width: 90%;
+            margin: 0 auto;
+            padding: 1.5rem;
+        }
+        /* Custom styles for the marquee to ensure visibility */
+        marquee {
+            background-color: #1e3a8a; /* Dark blue background for marquee */
+            color: white;
+            padding: 0.5rem 0;
+            border-radius: 0.5rem;
+            margin-bottom: 2rem;
+        }
+        marquee h1 {
+            font-size: 2.5rem; /* Larger font size for marquee */
+            font-weight: 700; /* Bold font weight */
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3); /* Subtle text shadow */
+        }
+        .blog-link h1 {
+            color: #1d4ed8; /* Blue for the blog link */
+            text-decoration: none;
+            transition: color 0.3s ease-in-out;
+        }
+        .blog-link h1:hover {
+            color: #2563eb; /* Darker blue on hover */
+            text-decoration: underline;
+        }
+        .article-card {
+            background-color: white;
+            border-radius: 0.75rem; /* More rounded corners */
+            box-shadow: 0 10px 15px rgba(0, 0, 0, 0.1); /* Larger shadow */
+            padding: 1.5rem;
+            margin-bottom: 2rem;
+            transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+            display: flex;
+            flex-direction: column; /* Stack elements vertically */
+            align-items: center; /* Center items horizontally */
+        }
+        .article-card:hover {
+            transform: translateY(-8px); /* Lift effect on hover */
+            box-shadow: 0 15px 20px rgba(0, 0, 0, 0.15); /* More prominent shadow */
+        }
+        .article-card img {
+            width: 100%; /* Ensure images fill their container */
+            height: 200px;
+            object-fit: cover; /* Cover the area, maintaining aspect ratio */
+            border-radius: 0.5rem; /* Rounded corners for images */
+            margin-bottom: 1rem;
+        }
+        .article-card h2 {
+            font-size: 1.5rem;
+            font-weight: 600;
+            margin-bottom: 0.75rem;
+            color: #1d4ed8; /* Blue for article headings */
+        }
+        .article-card h2 a {
+            text-decoration: none;
+            color: inherit;
+        }
+        .article-card h2 a:hover {
+            text-decoration: underline;
+        }
+        .article-card p {
+            font-size: 1rem;
+            line-height: 1.6;
+            text-align: center; /* Center paragraph text */
+        }
+
+        /* Responsive adjustments for smaller screens */
+        @media (min-width: 768px) {
+            .article-card {
+                flex-direction: row; /* Layout horizontally on larger screens */
+                align-items: flex-start; /* Align items to the start */
+            }
+            .article-card img {
+                width: 30%; /* Take up 30% width */
+                margin-right: 1.5rem; /* Space between image and text */
+                margin-bottom: 0;
+            }
+            .article-content {
+                flex: 1; /* Take remaining space */
+                text-align: left; /* Align text to the left */
+            }
+            .article-card p {
+                text-align: left; /* Align paragraph text to the left */
+            }
+        }
+    </style>
 </head>
+<body class="bg-gray-100 min-h-screen flex flex-col justify-center items-center py-8">
+    <div class="container bg-white p-8 rounded-xl shadow-lg">
+        <!-- Marquee Header -->
+        <marquee behavior="scroll" direction="left" class="bg-blue-800 text-white p-2 rounded-lg mb-8 shadow-md">
+            <h1 class="text-4xl font-bold text-center">Welcome to Accio Jobs!</h1>
+        </marquee>
 
-<body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+        <!-- Blog Link -->
+        <div class="blog-link text-center mb-8">
+            <h1 class="text-3xl font-semibold text-blue-700 hover:text-blue-800 transition-colors duration-300">
+                <a href="https://acciojob.com/blog/" target="_blank" rel="noopener noreferrer" class="rounded-lg p-2 hover:bg-blue-50">Accio Job's Blog</a>
+            </h1>
+        </div>
 
+        <!-- Articles Section -->
+        <div class="grid gap-8">
+            <!-- Article 1: Brute Force vs. Optimization -->
+            <div class="article-card">
+                <img src="https://images.unsplash.com/flagged/photo-1556514767-5c270b96a005?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2VhcmNofDI2fHxvcHRpbWl6YXRpb258ZW58MHx8fHwxNjcxMDAyOTIz&ixlib=rb-4.0.3&q=80&w=2000" alt="Brute Force vs. Optimization" height="200px" class="rounded-lg shadow-sm">
+                <div class="article-content">
+                    <h2 class="text-2xl font-semibold text-blue-700 mb-2">
+                        <a href="https://acciojob.com/blog/brute-force-vs-optimization/" target="_blank" rel="noopener noreferrer">Brute Force vs. Optimization</a>
+                    </h2>
+                    <p class="text-gray-700">We can say that optimization is the process of making something as effective or functional as possible. In terms of technology, optimization can involve making changes to a system to make it more efficient or to improve its performance. In coding, optimization can mean writing code that runs faster or uses less memory, or it can involve using algorithms that are more efficient. The benefits of optimization are many, including faster performance, reduced resource usage, and improved scalability.</p>
+                </div>
+            </div>
+
+            <!-- Article 2: DSA vs. Competitive Programming -->
+            <div class="article-card">
+                <img src="https://images.unsplash.com/photo-1504384308090-c894fdcc538d?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2VhcmNofDQxfHxjb21wZXRpdHZlJTIwcHJvZ3JhbW1pbmd8ZW58MHx8fHwxNjcwOTk4ODU0&ixlib=rb-4.0.3&q=80&w=2000" alt="DSA vs. Competitive Programming" height="200px" class="rounded-lg shadow-sm">
+                <div class="article-content">
+                    <h2 class="text-2xl font-semibold text-blue-700 mb-2">
+                        <a href="https://acciojob.com/blog/dsa-vs-competitive-programming/" target="_blank" rel="noopener noreferrer">DSA vs. Competitive Programming</a>
+                    </h2>
+                    <p class="text-gray-700">DSA or Competitive programming? What to choose for an undergraduate? One of the most frequently asked questions. Don't worry, we are going to explore all about both of these fields in this article. Both Data Structure & Algorithm and Competitive Programming are very important areas for a coder. While Data Structure & Algorithm is a fundamental concept for computer science, Competitive programming is a sport based on logical thinking and problem-solving through coding.</p>
+                </div>
+            </div>
+
+            <!-- Article 3: Complete Guide on FlexBox -->
+            <div class="article-card">
+                <img src="https://acciojob.com/blog/content/images/size/w2000/2023/02/Screenshot-2023-02-06-at-7.28.31-PM.png" alt="Complete Guide on FlexBox" height="200px" class="rounded-lg shadow-sm">
+                <div class="article-content">
+                    <h2 class="text-2xl font-semibold text-blue-700 mb-2">
+                        <a href="https://acciojob.com/blog/complete-guide-on-flexbox/" target="_blank" rel="noopener noreferrer">Complete Guide on FlexBox</a>
+                    </h2>
+                    <p class="text-gray-700">As a job seeker, you may wonder how important it is to have knowledge of FlexBox. The answer is, it's absolutely crucial! FlexBox is a CSS layout module that allows you to design a flexible responsive layout structure without using float or positioning. It allows you to arrange elements on a web page, and it's particularly useful for creating responsive designs that look great on any device.</p>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
-
 </html>
